Fixed bug with z-index

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -77,6 +77,7 @@ header {
   top: 0px;
   width: 100%;
   background-color: var(--color-background);
+  z-index: 100;
 }
 
 h1 {
@@ -226,7 +227,6 @@ of the parent .task element */
   width: var(--width-main-canvas);
   display: flex;
   flex-direction: column;
-  z-index: -1;
 }
 
 .task-title {
